--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,5 +13,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=dc12d099-f956-44d8-8555-26335717c389&lang=ru_RU" type="text/javascript"></script>
   </body>
 </html>
